# eflips-model

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  README.md  pyproject.toml  schema.graffle
.github/workflows/: black.yml  check-documentation-build.yml  check-documentation-version.yml  lint.yml  poetry-check.yml  release.yml  unittests.yml
consumption/: E-Bus Übersicht.xlsx  Recherche E-Bus Verbrauch mit Heizung.docx  consumption_model.py
doc/: conf.py  index.rst  requirements.txt
eflips/model/: __init__.py  alembic.ini  depot.py  general.py  network.py  schedule.py
eflips/model/migrations/: env.py
eflips/model/migrations/versions/: 0548463664b4_3_1_0.py  0820463fc0aa_6_0_5.py  126892076499_v2_0_0.py  1d0f22ea5789_5_0_0.py  1d60ee839397_6_0_7.py  26166d1bc557_6_0_4.py  28528a79c8de_v7_1_0.py  37ece7aa1742_6_0_0.py  3a62f62ef264_v10_0_0.py  3ed40e170361_5_1_0.py  44aca62291a9_v2_2_0.py  6ac022147397_3_0_0.py  6e96cbfb3523_v10_0_0.py  747085e84b69_6_0_8.py  7483339ae654_v2_2_0.py  7c26ba933d67_7_0_2.py  801705905f79_8_0_0.py  82b5c4d01e66_5_2_0.py  86302241f50a_5_1_3.py  8755e7591dcd_7_0_1.py  8c6c0d114d0c_4_0_0.py  8f2835b87d6e_v9_0_1.py  921afffb2adf_v10_0_2.py  9415968f804e_6_0_6.py  986abf14da65_5_1_7.py  9df1868d790a_9_0_0.py  9e29124f8ce6_v1_1_6.py  a06c97c98d2c_v2_1_0.py  a9f1c33488b6_3_0_0.py  aaf560d3e5e4_8_2_0.py  baef3598b52c_v2_3_0.py  dbae06354c36_10_0_0_initial.py  ddb65b675e43_9_0_0.py  e232e88e379d_5_1_2.py  e85326ec1582_5_1_1.py  e8f748c14b93_8_1_0.py  ee9340feec83_5_3_0.py
eflips/model/util/: consumption_table.py  export.py  import.py  migrate_dabase.sh
examples/: playground.py
examples/simple_scenario_and_depot_creation_de/: Netzplan.pub  README.md  example_scenario.ipynb
tests/: test_depot.py  test_example.py  test_general.py  test_import_export.py  test_network.py  test_schedule.py
