[tool.poetry]
name = "eflips-model"
version = "1.0.0-rc3"
description = "A common data model for the eflips family of electric vehicle simulation & optimization tools."
authors = [
	"Ludger Heide <ludger.heide@tu-berlin.de>",
	"Shuyao Guo <shuyo.guo@tu-berlin.de>"
]
readme = "README.md"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/mpm-tu-berlin/eflips-model"
repository = "https://github.com/mpm-tu-berlin/eflips-model"
packages = [{ include = "eflips/model" }]
include= ["LICENSE.md"]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
geoalchemy2 = "^0.14.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.11.0"
sphinx-autoapi = "^3.0.0"
pytest = "^7.4.3"
pytest-pycharm = "^0.7.0"
pre-commit = "^3.5.0"
sphinx-paramlinks = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

